<resources>
    <string name="app_name">Annuity Calc</string>
    <string name="CreditSumm">Сумма кредита:</string>
    <string name="TimeMonth">Срок (месяцев):</string>
    <string name="Rate">Ставка % (годовых):</string>
    <string name="MonthPayment">Месячный платеж:</string>
    <string name="Btn1">Расчитать сумму ежемесячного платежа...</string>
    <string name="Btn2">Расчитать фактическую ставку по кредиту</string>
    <string name="captionHint">Для расчета поля нажмите иконку калькулятора в нем</string>
    <string name="oversizeCaption">Переплата</string>
</resources>